--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   </style>
 </head>
 <body>
+  <div class="timeline" data-async="1" data-orientation='left'></div>
   <div class="timeline" data-min=2015 data-max=1970 data-step=-1 data-orientation='bottom'></div>
   <div class="timeline" data-min=2015 data-max=1970 data-step=-1 data-orientation='right' data-highlight='1'></div>
-  <div class="timeline" data-min=2015 data-max=1970 data-step=-1 data-orientation='left'></div>
   <div class="content">
   </div>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
@@ -25,10 +25,28 @@
   <script>
     $( document ).ready(function() {
       // Populate content for Demo
-      for (var i = 2015; i >= 1970; i=i-3) {
-        $('.content').append('<div class="year-container" data-year='+i+'></div><div class="year-column">'+i+'</div><br><br>');
-      };
+      function getRandomInt(min, max) {
+        min = Math.ceil(min);
+        max = Math.floor(max);
+        return Math.floor(Math.random() * (max - min)) + min;
+      }
+      function setContent(){
+        $('.content').html('');
+        for (var i = 2015+getRandomInt(-2,3); i >= 1970; i=i-getRandomInt(3,10)) {
+          $('.content').append('<div class="year-container" data-year='+i+'></div><div class="year-column">'+i+'<br><br></div>');
+        };
+      }
+      setContent();
+      $(document).on('keyup', function(event) {
+        console.log(event.originalEvent.key);
+        if(event.originalEvent.key=='r') {
 
+          setContent();
+          $('.timeline').each(function(index, el) {
+            $(this).data('dnSlider').reloadScrollItems();
+          });
+        }
+      });
       //  Plugin Values can be set with data attributes or on init here:
       $timeline = $('.timeline').dnSlider({
         scrollTop: 100,
