make show-all manual

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </style>
 </head>
 <body>
-  <div class="timeline" data-async="1" data-orientation='left'></div>
+  <div class="timelinev show-all" data-async="1" data-orientation='left'></div>
   <div class="timeline" data-min=2015 data-max=1970 data-step=-1 data-orientation='bottom'></div>
   <div class="timeline" data-min=2015 data-max=1970 data-step=-1 data-orientation='right' data-highlight='1'></div>
   <div class="content">
